styling-fix: max-height on img in teasers to prevent broken images to display too large

--- a/sites/all/themes/cb/sass/components/_page-list.scss
+++ b/sites/all/themes/cb/sass/components/_page-list.scss
@@ -81,6 +81,7 @@
 
       img {
         min-height: 170px;
+        max-height: 170px;
       }
     }
 
